tests/ui/nll/snocat-regression.stderr
error: `S` does not live long enough
  --> $DIR/snocat-regression.rs:7:5
   |
LL | /     || {
...  |
LL | |         let _x = link;
LL | |     };
   | |_____^

error: aborting due to 1 previous error

